resolve subheading z-index issue of ledger and datepicker cursor deafult pointer

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -9270,6 +9270,9 @@ ngx-daterangepicker-material {
 span#HW_badge_cont:nth-child(3){
     display: none !important;
 }
+.giddh-datepicker{
+    cursor: pointer !important;
+}
 /* responsive */
 
 @media (max-width: 1440px) {
